# vivsim

./: .gitignore  CLONE.md  Dockerfile  LICENSE  README.md  TRAFFIC.md  log.md  pyproject.toml  requirements.txt  setup.py  vivsim.def
demo_webgpu/: index.html  main.js  my_roll.js  package.json  server.js  style.css  test_render_logs.js
examples/: benchmark.py  benchmark3d.py  capillary_wave.py  couette_flow.py  dam_break.py  demo_fixed_sphere_ib3d.py  double_shear_layer.py  flow_pass_cylinder.py  flow_through_text.py  four_cylinder.py  free_surface_drop.py  gravity_wave.py  lid_driven_cavity.py  multiphase_droplet.py  poiseuille_channel.py  taylor_green_vortex.py  vfife_beam.py  vortex_induced_vibration.py  vortex_induced_vibration_multigpu.py  vortex_induced_vibration_multigrid.py  vortex_induced_vibration_refinement.py  wedge_entry.py
examples/2d/: couette_flow.py  double_shear_layer.py  flow_pass_cylinder.py  flow_through_text.py  lid_driven_cavity.py  poiseuille_channel.py  taylor_green_vortex.py  vortex_induced_vibration.py
examples/3d/: abc_flow.py  flow_past_sphere.py  oscillating_cylinder.py
output/viv/: parameters.yml
src/: ldc.py  ldc_post.py  viv.py  viv_para.ipynb  viv_para.json  viv_post_animation.py
src/vivsim/: ib.py  lbm.py
studies/flow_over_text/: fot.py  fot_post.py
studies/flow_through_text/: ftt_main.py  ftt_post.py
studies/lid_driven_cavity/: ldc_main.py  ldc_post.py
studies/vortex-induced vibration/: viv.py  viv_post_animation.py  viv_prep.ipynb
tests/: test_boundary.py  test_boundary_regression.py  test_collision.py  test_equilibrium.py  test_forcing.py  test_ib.py  test_poiseuille.py  test_state.py  test_streaming.py
vivsim/: __init__.py  dyn.py  dynamics.py  ib.py  iblbm.py  lbm.py  mrt.py  multidevice.py  multigrid.py  parameters.json  post.py  pre.py  run.py  state.py  utils.py  viv_para.ipynb
vivsim/ib/: __init__.py  geometry.py  kernels.py  mdf.py  stencil.py
vivsim/ib3d/: __init__.py  geometry.py  kernels.py  mdf.py  stencil.py
vivsim/iblbm/: core.py  dynamics.py  post.py
vivsim/lbm/: __init__.py  basic.py  free_surface.py  lattice.py
vivsim/lbm3d/: __init__.py  _lattice.py  basic.py  lattice.py
(+32 files in other folders)
