[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "vivsim"
version = "0.5.0"
requires-python = ">=3.8"
authors = [{ name = "Haiming Zhu", email = "zhuhaiming@tju.edu.cn" }]
dependencies = ['matplotlib', 'numpy', 'tqdm', 'jax[cuda12]']

[project.urls]
"Homepage" = "https://github.com/haimingz/vivsim"
"Source" = "https://github.com/haimingz/vivsim"

[tool.setuptools]
py-modules = ["vivsim"]